errors.log
cargo :    Compiling hdr-screenshot v0.1.0 (D:\Dev\screenshot)
At line:1 char:1
+ cargo build --release 2>&1 | Out-File -Encoding utf8 
d:\Dev\screensho ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling hd...Dev\ 
   screenshot):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0425]: cannot find function, tuple struct or tuple variant 
`SetCapture` in this scope
   --> src\overlay.rs:254:13
    |
254 |             SetCapture(hwnd);
    |             ^^^^^^^^^^ not found in this scope
    |
help: consider importing this function through its public re-export
    |
  1 + use crate::SetCapture;
    |

error[E0425]: cannot find function, tuple struct or tuple variant 
`ReleaseCapture` in this scope
   --> src\overlay.rs:283:25
    |
283 |                 let _ = ReleaseCapture();
    |                         ^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function through its public re-export
    |
  1 + use crate::ReleaseCapture;
    |

error[E0425]: cannot find function, tuple struct or tuple variant 
`ReleaseCapture` in this scope
   --> src\overlay.rs:289:21
    |
289 |             let _ = ReleaseCapture();
    |                     ^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function through its public re-export
    |
  1 + use crate::ReleaseCapture;
    |

error[E0425]: cannot find value `VK_ESCAPE` in this scope
   --> src\overlay.rs:294:28
    |
294 |             if wparam.0 == VK_ESCAPE.0 as usize {
    |                            ^^^^^^^^^ not found in this scope
    |
help: consider importing this constant through its public re-export
    |
  1 + use crate::VK_ESCAPE;
    |

error[E0425]: cannot find function, tuple struct or tuple variant 
`ReleaseCapture` in this scope
   --> src\overlay.rs:295:25
    |
295 |                 let _ = ReleaseCapture();
    |                         ^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function through its public re-export
    |
  1 + use crate::ReleaseCapture;
    |

error[E0308]: mismatched types
  --> src\capture.rs:78:24
   |
78 |             BindFlags: D3D11_BIND_FLAG(0),
   |                        ^^^^^^^^^^^^^^^^^^ expected `u32`, 
found `D3D11_BIND_FLAG`

error[E0308]: mismatched types
  --> src\capture.rs:79:29
   |
79 |             CPUAccessFlags: D3D11_CPU_ACCESS_READ,
   |                             ^^^^^^^^^^^^^^^^^^^^^ expected 
`u32`, found `D3D11_CPU_ACCESS_FLAG`

error[E0308]: mismatched types
  --> src\capture.rs:80:24
   |
80 |             MiscFlags: D3D11_RESOURCE_MISC_FLAG(0),
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected 
`u32`, found `D3D11_RESOURCE_MISC_FLAG`

error[E0061]: this method takes 3 arguments but 2 arguments were 
supplied
   --> src\capture.rs:82:47
    |
 82 |         let staging: ID3D11Texture2D = 
device.CreateTexture2D(&staging_desc, None)?;
    |                                               
^^^^^^^^^^^^^^^--------------------- argument #3 of type 
`Option<*mut Option<Direct3D11::ID3D11Texture2D>>` is missing
    |
note: method defined here
   --> C:\Users\Jiyao\.cargo\registry\src\index.crates.io-1949cf8c6b
5b557f\windows-0.58.0\src\Windows\Win32\Graphics\Direct3D11\mod.rs:5
27:19
    |
527 |     pub unsafe fn CreateTexture2D(&self, pdesc: *const 
D3D11_TEXTURE2D_DESC, pinitialdata: Option<*const 
D3D11_SUBRESOURCE_DATA>, p...
    |                   ^^^^^^^^^^^^^^^
help: provide the argument
    |
 82 |         let staging: ID3D11Texture2D = 
device.CreateTexture2D(&staging_desc, None, /* Option<*mut 
Option<Direct3D11::ID3D11Texture2D>> */)?;
    |                                                               
                   
++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: `?` operator has incompatible types
  --> src\capture.rs:82:40
   |
82 |         let staging: ID3D11Texture2D = 
device.CreateTexture2D(&staging_desc, None)?;
   |                                        
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected 
`ID3D11Texture2D`, found `()`
   |
   = note: `?` operator cannot convert from `()` to 
`Direct3D11::ID3D11Texture2D`

error[E0277]: the trait bound `&HINSTANCE: 
From<Foundation::HMODULE>` is not satisfied
     --> src\overlay.rs:70:28
      |
   70 |             Some(hinstance.into()),
      |                            ^^^^ the trait 
`From<Foundation::HMODULE>` is not implemented for `&HINSTANCE`
      |
help: the trait `From<Foundation::HMODULE>` is not implemented for 
`&HINSTANCE`
      but it is implemented for `HINSTANCE`
     --> C:\Users\Jiyao\.cargo\registry\src\index.crates.io-1949cf8c
6b5b557f\windows-0.58.0\src\Windows\Win32\Foundation\mod.rs:10795:1
      |
10795 | impl From<HMODULE> for HINSTANCE {
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      = help: for that trait implementation, expected `HINSTANCE`, 
found `&HINSTANCE`
      = note: required for `Foundation::HMODULE` to implement 
`Into<&HINSTANCE>`

error[E0277]: the trait bound `&HINSTANCE: 
From<Foundation::HMODULE>` is not satisfied
     --> src\overlay.rs:146:53
      |
  146 |         UnregisterClassW(class_name, 
Some(hinstance.into()));
      |                                                     ^^^^ 
the trait `From<Foundation::HMODULE>` is not implemented for 
`&HINSTANCE`
      |
help: the trait `From<Foundation::HMODULE>` is not implemented for 
`&HINSTANCE`
      but it is implemented for `HINSTANCE`
     --> C:\Users\Jiyao\.cargo\registry\src\index.crates.io-1949cf8c
6b5b557f\windows-0.58.0\src\Windows\Win32\Foundation\mod.rs:10795:1
      |
10795 | impl From<HMODULE> for HINSTANCE {
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      = help: for that trait implementation, expected `HINSTANCE`, 
found `&HINSTANCE`
      = note: required for `Foundation::HMODULE` to implement 
`Into<&HINSTANCE>`

Some errors have detailed explanations: E0061, E0277, E0308, E0425.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `hdr-screenshot` (bin "hdr-screenshot") 
due to 12 previous errors
